add favicon, background image, nav abckground gradient

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- this is my cute dromedary-camel_1f42a -->
     <link rel="shortcut icon"
-        href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/198/elephant_1f418.png">
+        href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/271/amphora_1f3fa.png">
+
+    <!-- <link rel="shortcut icon"
+        href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/198/elephant_1f418.png"> -->
 
 </head>
 
