add rgba for text, rezised container for image

--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
     <h1 style="color:turquoise"> Greek Mythology</h1>
-    <div style="padding:10px 16px;">
+    <div  style="padding:10px 16px;">
         <section>
             <h2 class="rainbow-text"> Welcome to this Awesome Greek Mythology Reference Guide</h2>
-            <p>Learn about the primordial gods from the dawn of time, the Titans that came after, and the Olympian gods, which have been the subject of pop culture many a time in the recent past! </p>
-            <figure>
-                <img src="greekpantheon.png" alt="Here's a picture of the Greek Pantheon of Gods">
-                <figcaption>The gods of the Greek Pantheon</figcaption>
+            <p class="transbox">Learn about the primordial gods from the dawn of time, the Titans that came after, and the Olympian gods, which have been the subject of pop culture many a time in the recent past! </p>
+            <figure class="transbox">
+                <img src="greekpantheon.png" alt="Here's a picture of the Greek Pantheon of Gods" style="width: 50%;
+                height: auto;">
+                <figcaption style="font-style: italic; font-size: smaller;">The gods of the Greek Pantheon</figcaption>
             </figure>
         </section>
         <hr>
-        <h2 class="rainbow-text"> Reference Catalog: </h2>
+        <h2 class="transbox"> Reference Catalog: </h2>
         <div class="svg-wrapper">
             <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                 <rect class="shape" height="40" width="150" />
@@ -75,7 +76,8 @@
 
     <!-- have to find a way to pad the top of the footer another way -->
 </pre>
-    <footer>
+
+    <footer style="border:2px solid Violet;">
        
         <!-- font awesome icons-->
         <a href="https://github.com/SoonaMata" target="_blank" class="fa fa-github"> </a>
@@ -83,6 +85,7 @@
         <a href="https://www.linkedin.com/in/yesnamatta/" target="_blank" class="fa fa-linkedin"> </a>
         <a href="https://www.facebook.com/soOonaMata " target="_blank" class="fa fa-facebook"> </a>
     </footer>
+
 </body>
 
 </html>
