add repeat background image

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             <h2 class="rainbow-text"> Welcome to this Awesome Greek Mythology Reference Guide</h2>
             <p class="transbox">Learn about the primordial gods from the dawn of time, the Titans that came after, and the Olympian gods, which have been the subject of pop culture many a time in the recent past! </p>
             <figure class="transbox">
-                <img src="greekpantheon.png" alt="Here's a picture of the Greek Pantheon of Gods" style="width: 50%;
-                height: auto;">
+                <img src="greekpantheon.png" alt="Here's a picture of the Greek Pantheon of Gods">
                 <figcaption style="font-style: italic; font-size: smaller;">The gods of the Greek Pantheon</figcaption>
             </figure>
         </section>
